--- a/index.html
+++ b/index.html
@@ -127,85 +127,82 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
   <script>
-    document.getElementById('submitBtn').addEventListener('click', async () => {
-      const authCode = document.getElementById("authCode").value.trim();
-      const honeypot = document.getElementById("honeypot")?.value.trim() || "";
+  document.getElementById('submitBtn').addEventListener('click', async () => {
+    const authCode = document.getElementById("authCode").value.trim();
+    const honeypot = document.getElementById("honeypot")?.value.trim() || "";
 
-      const lastSent = localStorage.getItem("lastSent");
-      const now = Date.now();
-      if (lastSent && now - parseInt(lastSent) < 30000) {
-        alert("⏳ Por favor espera unos segundos antes de enviar otro pronóstico.");
-        return;
-      }
+    const lastSent = localStorage.getItem("lastSent");
+    const now = Date.now();
+    if (lastSent && now - parseInt(lastSent) < 30000) {
+      alert("⏳ Por favor espera unos segundos antes de enviar otro pronóstico.");
+      return;
+    }
 
-      const requiredFields = ["sport", "event", "date", "bettype", "odds", "confidence"];
-      for (let id of requiredFields) {
-        const el = document.getElementById(id);
-        if (!el.value.trim()) {
-          el.style.borderColor = "red";
-          el.focus();
-          alert("⚠️ Por favor completa todos los campos obligatorios de la sección gratuita.");
-          return;
-        } else {
-          el.style.borderColor = "#1DB954";
-        }
-      }
-
-      if (!authCode || authCode !== "PunterX2025") {
-        document.getElementById("authCode").style.borderColor = "red";
-        alert("🚫 Código de acceso incorrecto");
+    const requiredFields = ["sport", "event", "date", "bettype", "odds", "confidence"];
+    for (let id of requiredFields) {
+      const el = document.getElementById(id);
+      if (!el.value.trim()) {
+        el.style.borderColor = "red";
+        el.focus();
+        alert("⚠️ Por favor completa todos los campos obligatorios de la sección gratuita.");
         return;
       } else {
-        document.getElementById("authCode").style.borderColor = "#1DB954";
+        el.style.borderColor = "#1DB954";
       }
+    }
 
-      const secret = "X9$Gtp#zD3@LP82mR*vWj5Q!7bCk%N0y";
-      const timestamp = Date.now().toString();
-      const signature = CryptoJS.HmacSHA256(timestamp, secret).toString();
+    if (!authCode || authCode !== "PunterX2025") {
+      document.getElementById("authCode").style.borderColor = "red";
+      alert("🚫 Código de acceso incorrecto");
+      return;
+    } else {
+      document.getElementById("authCode").style.borderColor = "#1DB954";
+    }
 
-      const fechaHora = document.getElementById("date").value.trim().split(" ");
-      const fecha = fechaHora[0] || "";
-      const hora = fechaHora[1] || "";
+    const secret = "X9$Gtp#zD3@LP82mR*vWj5Q!7bCk%N0y";
+    const timestamp = Date.now().toString();
+    const signature = CryptoJS.HmacSHA256(timestamp, secret).toString();
 
-      const data = {
-        authCode,
-        honeypot,
-        timestamp,
-        signature,
-        deporte: document.getElementById("sport").value.trim(),
-        evento: document.getElementById("event").value.trim(),
-        fecha,
-        hora,
-        cuota: document.getElementById("odds").value.trim(),
-        confianza: document.getElementById("confidence").value.trim(),
-        analisis_basico: document.getElementById("brief").value.trim(),
-        analisis_profesional: document.getElementById("detailed").value.trim(),
-        alternativa: document.getElementById("alternatives").value.trim(),
-        valor: document.getElementById("value").value.trim(),
-        timing: document.getElementById("timing").value.trim(),
-        notas: document.getElementById("notes").value.trim()
-      };
+    const data = {
+      authCode,
+      honeypot,
+      timestamp,
+      signature,
+      sport: document.getElementById("sport").value.trim(),
+      event: document.getElementById("event").value.trim(),
+      date: document.getElementById("date").value.trim(),
+      bettype: document.getElementById("bettype").value.trim(),
+      odds: document.getElementById("odds").value.trim(),
+      confidence: document.getElementById("confidence").value.trim(),
+      brief: document.getElementById("brief").value.trim(),
+      detailed: document.getElementById("detailed").value.trim(),
+      alternatives: document.getElementById("alternatives").value.trim(),
+      bookie: document.getElementById("bookie").value.trim(),
+      value: document.getElementById("value").value.trim(),
+      timing: document.getElementById("timing").value.trim(),
+      notes: document.getElementById("notes").value.trim()
+    };
 
-      try {
-        const response = await fetch('/.netlify/functions/send', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-            'X-Signature': signature
-          },
-          body: JSON.stringify(data)
-        });
+    try {
+      const response = await fetch('/.netlify/functions/send', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+          'X-Signature': signature
+        },
+        body: JSON.stringify(data)
+      });
 
-        if (response.ok) {
-          alert('✅ Pronóstico enviado correctamente');
-          localStorage.setItem("lastSent", Date.now());
-        } else {
-          alert('❌ Error al enviar pronóstico');
-        }
-      } catch (error) {
-        alert('❌ Error de conexión al servidor');
+      if (response.ok) {
+        alert('✅ Pronóstico enviado correctamente');
+        localStorage.setItem("lastSent", Date.now());
+      } else {
+        alert('❌ Error al enviar pronóstico');
       }
-    });
-  </script>
+    } catch (error) {
+      alert('❌ Error de conexión al servidor');
+    }
+  });
+</script>
 </body>
 </html>
